Fix flash-of-scrollbar when videos transition
Whenever the video switches from cloud -> cli -> cloud, a horizontal scrollbar
briefly appears as the sliding video forces the document width to expand. You
can stop that with an overflow: hidden.

--- a/content/source/assets/stylesheets/terraform-overview/pages/_home.scss
+++ b/content/source/assets/stylesheets/terraform-overview/pages/_home.scss
@@ -248,6 +248,7 @@
       padding-top: calc((100% * 0.63569) + 18px);
       position: relative;
       width: 100%;
+      overflow: hidden;
 
       @media (min-width: 768px) {
         margin-bottom: -152px;
